<resources>
    <string name="app_name">GoTrash</string>
    <string name="nama_aplikasi">Go Trash</string>
    <string name="text_error_email_empty">Email cannot empty</string>
    <string name="text_error_email_invalid">Email is invalid</string>
    <string name="text_error_password_empty">Password cannot empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_password_does_not_match">Password does not match</string>
    <string name="title_menu_home">Home</string>
    <string name="title_menu_notification">Notification</string>
    <string name="title_menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_sign_in">Login</string>
    <string name="text_sign_in_ask">Don’t have an account?</string>
    <string name="text_password">Password</string>
    <string name="text_username">Username</string>
    <string name="text_login_to_your_account">Login to your Account</string>
    <string name="text_manage_your_waste">Manage Your Waste</string>
    <string name="version_1_0_0">version 1.0.0</string>
    <string name="text_logout">Logout</string>
    <string name="are_you_sure">Apakah anda yakin untuk Logout?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="text_edit_profile">Ubah Nama</string>
    <string name="ganti_password">Ubah Password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="text_email">Email</string>
    <string name="text_sign_in_here">Sign up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="name_profile">Name</string>
    <string name="edit_profil">Edit</string>
    <string name="text_error_name_empty">Username is Invalid</string>
    <string name="google_maps_key" translatable="false">AIzaSyAXVhPEduEOApU901IVOaZtsnMRiT8IyME</string>
    <string name="text_retry">Retry</string>
    <string name="notification">Notification</string>
    <string name="text_trash_full">Your trash bin in TPS 002 is full.</string>
    <string name="text_trash_avoid">Please empty it to avoid overflow!</string>
    <string name="reminder">Reminder!</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="error_notif">Error Notification</string>
</resources>