<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp">

        <ImageView
            android:id="@+id/imageViewIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_trash"
            app:tint="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/imageViewIcon"
            app:layout_constraintTop_toTopOf="@id/textViewDate"
            app:layout_constraintEnd_toStartOf="@id/textViewDate"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_trash_full"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintStart_toStartOf="@id/textViewTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0" />
        <TextView
            android:id="@+id/textViewMessageDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_trash_avoid"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/textViewMessage"
            app:layout_constraintStart_toStartOf="@id/textViewTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tvRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_read"
            android:textColor="#00C853"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22 Jul 2024"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
